--- a/axios-fauxy-interceptor/package.json
+++ b/axios-fauxy-interceptor/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "hash-wasm": "^4.11.0"
+    "hash-wasm": "^4.11.0",
+    "pino": "^9.3.2"
   }
 }
