--- a/axios-fauxy-interceptor/tsconfig.json
+++ b/axios-fauxy-interceptor/tsconfig.json
@@ -1,7 +1,9 @@
 {
-  "extends": "@tsconfig/node20/tsconfig.json",
+  "extends": "@tsconfig/node18/tsconfig.json",
   "compilerOptions": {
+    "declaration": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-  }
+    "rootDir": "./src"
+  },
+  "exclude": ["dist", "**/*.unit.ts", "**/*.integrated.ts"]
 }
