Better package listing

--- a/axios-fauxy-interceptor/package.json
+++ b/axios-fauxy-interceptor/package.json
@@ -1,11 +1,20 @@
 {
   "name": "axios-fauxy-interceptor",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "license": "MIT",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist", "LICENSE", "README.md"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/groves/fauxy-js.git",
+    "directory": "axios-fauxy-interceptor"
+  },
+  "files": [
+    "dist",
+    "LICENSE",
+    "README.md"
+  ],
   "scripts": {
     "prepare": "tsc"
   },
