Handle lack of parentPath on earlier Node versions

--- a/.envrc
+++ b/.envrc
@@ -4,3 +4,7 @@ if has nix; then
     fi
     use flake
 fi
+if has fnm; then
+    eval "$(fnm env --shell bash)"
+    fnm use --log-level error --install-if-missing "${FNM_VERSION:-20.17.0}"
+fi
