Run tests on PR

--- a/axios-fauxy-interceptor/package.json
+++ b/axios-fauxy-interceptor/package.json
@@ -16,7 +16,8 @@
     "README.md"
   ],
   "scripts": {
-    "prepare": "tsc"
+    "prepare": "tsc",
+    "test": "vitest"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.4",
