Handle a directory entry disappearing miditeration

--- a/.envrc
+++ b/.envrc
@@ -8,3 +8,4 @@ if has fnm; then
     eval "$(fnm env --shell bash)"
     fnm use --log-level error --install-if-missing "${FNM_VERSION:-20.17.0}"
 fi
+layout node
